<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    app:layout_constraintTop_toBottomOf="@id/content"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:gravity="center">
    <LinearLayout
        android:id="@+id/linearlayout01"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
        android:id="@+id/tag"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button01"
        android:text="Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button02"
        android:text="Post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button03"
        android:text="Accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button04"
        android:text="Match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dip"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center|bottom"-->
<!--            android:orientation="vertical" >-->
            <Button
                android:id="@+id/logout_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#AE4D8B"
                android:text="logout" />
<!--                android:gravity="center|bottom"-->
<!--        </LinearLayout>-->


  </LinearLayout>

    <LinearLayout
        app:layout_constraintStart_toStartOf="@id/linearlayout02"
        android:layout_alignParentRight="true"
        android:id="@+id/linearlayout02"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">
            <TextView android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="Name:" />
            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="Bio:" />
            <EditText
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="Deadline:" />
            <EditText
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="Address:" />
            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="Rent:" />
            <EditText
                android:id="@+id/rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="Utilities:" />
            <EditText
                android:id="@+id/utilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="Number of Roommates Looking For:" />
            <EditText
                android:id="@+id/roommates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />


            <Button
                android:id="@+id/buttonPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="POST"
                app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>