<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:id="@+id/layout_register">
    <TextView android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="REGISTER"
        android:textSize="32dp"
        android:gravity="center"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:hint="Email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:hint="Password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already a User?"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:drawablePadding="6dp"
                android:padding="4dp"/>
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="170dp"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>


        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:shadowColor="@android:color/transparent"
            android:padding="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:drawablePadding="10dp" />
    </LinearLayout>
